--- a/index.html
+++ b/index.html
@@ -594,6 +594,56 @@
         font-weight: bold;
     }
 
+    /* Loading Overlay Styles */
+    .loading-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0.3s;
+    }
+
+    .loading-overlay.show {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .loading-container {
+        display: flex;
+        flex-direction: column; /* Stack spinner and text vertically */
+        align-items: center;    /* Center items horizontally */
+        gap: 20px;              /* Add space between spinner and text */
+    }
+
+    .spinner {
+        border: 6px solid rgba(0, 0, 0, 0.1);
+        border-top: 6px solid #4CAF50;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+
+    .loading-overlay p {
+        font-size: 18px;
+        color: #333;
+        font-weight: bold;
+        margin: 0;
+    }
+
     </style>
 </head>
 <body>
@@ -784,6 +834,14 @@
 
         <!-- Right Section: Graph -->
         <div class="right-section">
+
+            <div class="loading-overlay" id="loadingOverlay">
+                <div class="loading-container">
+                    <div class="spinner"></div>
+                    <p>Loading data, please wait...</p>
+                </div>
+            </div>
+
             <div id="totalPortfolioChart"></div>
             
             <div id="customRangeSelector" class="custom-range-selector">
@@ -843,44 +901,20 @@
         const alwaysUseHighestPeakYesBtn = document.getElementById('alwaysUseHighestPeakYes');
         const alwaysUseHighestPeakNoBtn = document.getElementById('alwaysUseHighestPeakNo');
 
+        function showLoadingOverlay() {
+            console.log("Showing loading overlay...");
+            const loadingOverlay = document.getElementById('loadingOverlay');
+            loadingOverlay.classList.add('show');
+        }
+
+        function hideLoadingOverlay() {
+            console.log("Hiding loading overlay...");
+            const loadingOverlay = document.getElementById('loadingOverlay');
+            loadingOverlay.classList.remove('show');
+        }
+
         function getFilteredStockData(dataArray, startDateObj, endDateObj) {
-            // Helper function for binary search
-            function binarySearch(array, targetDate, findStart) {
-                let low = 0;
-                let high = array.length - 1;
-                let result = -1;
-                while (low <= high) {
-                    const mid = Math.floor((low + high) / 2);
-                    const midDate = array[mid].dateObj;
-                    if (midDate < targetDate) {
-                        low = mid + 1;
-                    } else if (midDate > targetDate) {
-                        high = mid - 1;
-                    } else {
-                        result = mid;
-                        if (findStart) {
-                            high = mid - 1;
-                        } else {
-                            low = mid + 1;
-                        }
-                    }
-                }
-                // If exact date is not found, return the closest index
-                return findStart ? low : high;
-            }
-
-            // Ensure the data is sorted by dateObj
-            dataArray.sort((a, b) => a.dateObj - b.dateObj);
-
-            const startIndex = binarySearch(dataArray, startDateObj, true);
-            const endIndex = binarySearch(dataArray, endDateObj, false);
-
-            // Handle cases where dates are out of range
-            if (startIndex > endIndex || startIndex >= dataArray.length || endIndex < 0) {
-                return [];
-            }
-
-            return dataArray.slice(startIndex, endIndex + 1);
+            return dataArray.filter(data => data.dateObj >= startDateObj && data.dateObj <= endDateObj);
         }
 
         // Debounce function to limit the rate of function calls
@@ -1350,7 +1384,13 @@
             calculateResults();
         }
 
-        function calculateResults() {
+        async function calculateResults() {
+            try {
+            showLoadingOverlay(); // Show the loading overlay
+            await new Promise(resolve => setTimeout(resolve, 0)); // Yield to the browser to render the overlay
+
+            console.log("Starting calculations...");
+
             collectData(); // Ensure we have the latest data for modeL c
 
             const buyPoints = [];
@@ -1372,6 +1412,7 @@
                 console.error("No stock data available for the selected date range.");
                 finalTotalValueDisplay.textContent = 'No data';
                 updateChart([], [], [], [], []);
+                hideLoadingOverlay(); // Hide the overlay if no data is found
                 return;
             }
 
@@ -1859,8 +1900,15 @@
                 sellPoints,
                 totalCashValues,
                 resetPoints
-            );        
+            );
             window.transactionLog = transactionLog;
+
+            hideLoadingOverlay(); // Hide the overlay once calculations are complete
+                console.log("Calculations completed and overlay hidden.");
+            } catch (error) {
+                console.error("Error during calculations:", error);
+                hideLoadingOverlay(); // Ensure the overlay is hidden even if there's an error
+            }
         }
 
         function parseDate(dateStr) {
